--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   </head>
   <body>
     <div id="root"></div>
+    <script
+      src="//code.tidio.co/fmimpicgthabwbjnf6lcz40zq5hoaj7j.js"
+      async
+    ></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
